# serena

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml  ci.yml  release.yml
scripts/: gen-release-notes.sh  release.sh
src/: file_watcher.rs  handlers.rs  main.rs  opts.rs
