[package]
name = "serena"
description = "Fast and lightweight static site server for local development."
version = "21.3.0"
authors = ["Nick Gravelyn <nick@nickgravelyn.com>"]
edition = "2018"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33.3" }
notify = { version = "4.0.15" }
futures = { version = "0.3.13", features = ["thread-pool"] }
hyper = { version = "0.14.5", features = ["server", "stream", "http1", "tcp"] }
tokio = { version = "1.4.0", features = ["rt-multi-thread", "sync", "fs", "macros"] }
tokio-stream = { version = "0.1.5", features = ["sync"] }
tokio-util = { version = "0.6.5", features = ["codec"] }
